--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Creative Creator</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+    <script
+    defer
+    id="inthegame-script"
+    src="https://html5.inthegame.io/v2-3/main.js"
+  ></script>
+
 </head>
 <body>
     <div class="container">
@@ -32,7 +38,10 @@
                 </div>
                 <div class="json-panel">
                     <h3>Updated JSON</h3>
-                    <button class="copy-button" onclick="copyToClipboard()">Copy to Clipboard</button>
+                    <div class="button-group">
+                        <button class="copy-button" onclick="copyToClipboard()">Copy to Clipboard</button>
+                        <button class="inject-button" onclick="injectJSON()">Inject to Player</button>
+                    </div>
                     <textarea id="jsonUpdated" class="json-textarea" readonly></textarea>
                 </div>
             </div>
