Refactor video markup and styles for improved structure.
Encapsulated the video element within a new `.video-container` div for better semantic structure and styling flexibility. Updated styles to ensure responsive sizing and adjusted background color of the video section for improved visual clarity.

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
     <div class="container">
         <div class="main-content">
             <div class="video-section">
-                <video id="video-player" controls>
-                    <source src="https://2432eaf2dccf48859f8ea489fd5e0f8f.mediatailor.us-east-1.amazonaws.com/v1/master/7c8ce5ad5bcc5198ca301174a2ead89b25915ca4/stitchtest/index.m3u8" type="application/x-mpegURL">
-                    Your browser does not support HLS video.
-                </video>
+                <div class="video-container">
+                    <video id="video-player" controls>
+                        <source src="https://2432eaf2dccf48859f8ea489fd5e0f8f.mediatailor.us-east-1.amazonaws.com/v1/master/7c8ce5ad5bcc5198ca301174a2ead89b25915ca4/stitchtest/index.m3u8" type="application/x-mpegURL">
+                        Your browser does not support HLS video.
+                    </video>
+                </div>
             </div>
             <div class="json-section">
                 <div class="json-panel">
