--- a/index.html
+++ b/index.html
@@ -31,11 +31,6 @@
                     <textarea id="jsonInput" class="json-textarea"></textarea>
                     <div id="jsonError" class="error-message"></div>
                     <div class="template-buttons">
-                        <button onclick="loadTemplate('poll')">Poll</button>
-                        <button onclick="loadTemplate('quiz')">Quiz</button>
-                        <button onclick="loadTemplate('lband')">Lband</button>
-                        <button onclick="loadTemplate('split')">Split Screen</button>
-                        <button onclick="loadTemplate('banner')">Banner</button>
                     </div>
                 </div>
                 <div class="json-panel">
@@ -53,7 +48,7 @@
             <div id="dynamicInputs"></div>
         </div>
     </div>
-    <script src="templates.js"></script>
+    <script id="client-templates"></script>
     <script src="main.js"></script>
 </body>
 </html>
