checking if stitched made

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
     </div>
     <div class="footer">
-        <button id="inject-button" class="inject-preview-button" onclick="injectJSON()">Preview</button>
+        <button id="inject-button" class="inject-preview-button inject-button" onclick="injectJSON()">Preview</button>
     </div>
     <script id="client-templates"></script>
     <script src="main.js"></script>
