new templates design

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   ></script>
 </head>
 <body>
+    <header class="header">
+        <img src="https://admin.internal.inthegame.io/dev/static/media/logo.51da2873df04ecaa8e21.png" alt="Logo" class="header-logo">
+    </header>
     <div class="container">
         <div class="column column-1">
             <div class="video-section">
@@ -50,8 +53,12 @@
         </div>
         <div class="column column-3">
             <div class="variables-section">
-                <h2>Variables</h2>
-                <div id="dynamicInputs"></div>
+                <div class="code-header">
+                    <h3>Variables</h3>
+                </div>
+                <div class="variables-content">
+                    <div id="dynamicInputs"></div>
+                </div>
             </div>
         </div>
     </div>
