--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creative Creator</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css?213">
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <script
     defer
     id="inthegame-script"
-    src="https://html5.inthegame.io/v2-3/main.js"
+    src="https://html5.inthegame.io/v2-3/main.js?123"
   ></script>
 </head>
 <body>
