--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <header class="header">
         <img src="https://admin.internal.inthegame.io/dev/static/media/logo.51da2873df04ecaa8e21.png" alt="Logo" class="header-logo">
+        <button id="inject-button" class="inject-preview-button" onclick="injectJSON()">Preview</button>
     </header>
     <div class="container">
         <div class="column column-1">
@@ -61,9 +62,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="footer">
-        <button id="inject-button" class="inject-preview-button inject-button" onclick="injectJSON()">Preview</button>
     </div>
     <script id="client-templates"></script>
     <script src="main.js"></script>
