--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creative Creator</title>
-    <link rel="stylesheet" href="styles.css?213">
+    <title>ITG Template Engine</title>
+    <link rel="stylesheet" href="styles.css?2131">
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <script
     defer
     id="inthegame-script"
-    src="https://html5.inthegame.io/v2-3/main.js?123"
+    src="https://html5.inthegame.io/v2-3/main.js?1232"
   ></script>
 </head>
 <body>
