--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="https://admin.internal.inthegame.io/dev/static/media/logo.51da2873df04ecaa8e21.png" alt="Logo" class="header-logo">
+        <img src="temolate-logo.png" alt="Logo" class="header-logo">
         <button id="inject-button" class="inject-preview-button" onclick="injectJSON()">Preview</button>
     </header>
     <div class="container">
