--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ITG Template Engine</title>
+    <title>ITG Templates Engine</title>
     <link rel="stylesheet" href="styles.css?2131">
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <script
