--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         Your browser does not support HLS video.
                     </video>
                 </div>
-                <div class="aspect-ratio-controls">
+                <div class="aspect-ratio-controls" style="display: none;">
                     <button class="aspect-ratio-btn" data-ratio="16:9" data-percent="56.25">16:9</button>
                     <button class="aspect-ratio-btn" data-ratio="9:16" data-percent="177.78">9:16</button>
                     <button class="aspect-ratio-btn" data-ratio="4:3" data-percent="75">4:3</button>
