--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         Your browser does not support HLS video.
                     </video>
                 </div>
-                <div class="aspect-ratio-controls" style="display: none;">
+                <!-- <div class="aspect-ratio-controls" style="display: none;">
                     <button class="aspect-ratio-btn" data-ratio="16:9" data-percent="56.25">16:9</button>
                     <button class="aspect-ratio-btn" data-ratio="9:16" data-percent="177.78">9:16</button>
                     <button class="aspect-ratio-btn" data-ratio="4:3" data-percent="75">4:3</button>
@@ -38,7 +38,7 @@
                     <button class="aspect-ratio-btn" data-ratio="19.5:9" data-percent="46.15">19.5:9</button>
                     <button class="aspect-ratio-btn" data-ratio="18:9" data-percent="50">18:9</button>
                     <button class="aspect-ratio-btn" data-ratio="17:9" data-percent="52.94">17:9</button>
-                </div>
+                </div> -->
             </div>
             <div class="source-code-section">
                 <div class="code-header">
