--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="video-section">
                 <div class="video-container" id="video-container">
                     <video id="video-player" controls>
-                        <source src="https://2432eaf2dccf48859f8ea489fd5e0f8f.mediatailor.us-east-1.amazonaws.com/v1/master/7c8ce5ad5bcc5198ca301174a2ead89b25915ca4/stitchtest/index.m3u8" type="application/x-mpegURL">
+                        <source src="https://assets.inthegame.io/movies/bugsbunny.m3u8" type="application/x-mpegURL">
                         Your browser does not support HLS video.
                     </video>
                 </div>
@@ -89,7 +89,7 @@
             
             // Function to set video to 10 seconds and pause
             function setVideoPosition() {
-                videoPlayer.currentTime = 68;
+                videoPlayer.currentTime = 44;
                 videoPlayer.pause();
             }
             
